[metadata]
license-file = LICENSE

[flake8]
max-line-length = 120
#Compatibility with black
ignore = E203, W503

[versioneer]
VCS = git
style = pep440
versionfile_source = scalable/_version.py
versionfile_build = scalable/_version.py
tag_prefix =
parentdir_prefix = scalable-

[aliases]
test = pytest

[isort]
default_section=THIRDPARTY
known_first_party=scalable
multi_line_output=4

[bdist_wheel]
universal = 1
